	  Add interrupt vector support for the SAM4L family (2013-6-3).
	* arch/include/sam34/chip.h:  Add chip definitions for the SAM4L
	  family (2013-6-3).
	* configs/sam4l-xplained:  A partial configuration that will (eventually)
	  support the SAM4L Xplained Pro developement board (2013-6-3).
	* arch/arm/src/sam34/chip/sam4l_pinmap.h:  Initial cut as SAM4L
	  pin mapping (2013-6-3).
	* arch/arm/src/stm32/stm32*_dma.*:  Add a new interface function,
	  stm32_dmacapable() that can be used to determine if DMA is
	  possible from the specified memory address.  From Petteri Aimonen
	  (2013-6-4).
	* arch/arm/src/stm32/stm32_spi.c:  If CONFIG_STM32_DMACAPABLE is
	  defined, use stm32_dmacapable() to determine if it is possible
	  to perform DMA from the specified address.  This change is
	  important for the STM32 F4 which may have SPI data buffers
	  allocated on the stack in CCM memory which cannot support the
	  DMA.  From Petteri Aimonen (2013-6-4).
	* nuttx/arch/arm/src/sam34/sam4l_gpio.h: Created GPIO driver
	  header file for the SAM4L.  Also renamed the SAM3U header
	  file to sam3u_gpio.h (2013-6-4).
	* nuttx/arch/arm/src/sam34/sam4l_gpio.c: Created GPIO driver for
	  the SAM4L (2013-6-4).
	* nuttx/configs/sam4l-xplained/src/sam_userleds.c:  Added.
	  (2013-6-4).
	* configs/sam4l-xplained/src/sam_userleds.c:  Add application
	  LED interfaces (2013-6-5).
	* arch/arm/src/sam34/sam4l_gpio.c and arch/arm/src/sam34/chip/sam4l_gpio.h:
	  Fix GPIO port address; fix compilation errors (2013-6-5).
	* arch/arm/src/sam34/chip/sam4l_flashcalw.h:  Add header file
	  for SAM4L FLASH and PICOCACHE definitions (2013-6-5).
	* arch/arm/src/sam34/chip/sam4l_pm.h:  Add header file for SAM4L
	  Power Management.  Leveraged from AVR32 (2013-6-5).
	* arch/arm/src/sam34/sarm4l_clockconfig.c:  SAM4L clock configuration
	  logic (leveraged from AVR32).
	* nuttx/arch/arm/src/sam34/sam4l_periphclks.c/h:  Add common
	  logic to enabled/disable SAM4L peripheral clocking (2013-6-5).
